--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,4 +5,18 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
+    <!-- ****************service***************************************** -->
+    <string name="service_menu_lifetime">服务/服务生命周期</string>
+    <string name="service_menu_testservice">服务/测试</string>
+    <string name="service_menu_musicservice">服务/例子/音乐</string>
+    <string name="start_service">启动服务</string>
+    <string name="stop_service">停止服务</string>
+    <string name="bind_service">绑定服务</string>
+    <string name="unbind_service">解除绑定服务</string>
+    <string name="local_service_stopped">解除绑定服务</string>
+    <string name="local_service_connected">服务已经连接</string>
+    <string name="local_service_disconnected">服务已经断开</string>
+    <string name="service_log">wjb_service_log</string>
+    <string name="title_activity_click_show_result">ClickShowResult</string>
+
 </resources>
